# nanocat

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html
nanocat/: server.py  server_playground.py
nanocat/adapters/: base_llm_adapter.py
nanocat/adapters/schemas/: tools_schema.py
nanocat/adapters/services/: open_ai_adapter.py
nanocat/audio/: utils.py
nanocat/audio/filters/: base_audio_filter.py
nanocat/audio/mixers/: base_audio_mixer.py
nanocat/audio/turn/: base_turn_analyzer.py
nanocat/audio/vad/: silero.py  vad_analyzer.py
nanocat/clocks/: base_clock.py  system_clock.py
nanocat/frames/: frames.py
nanocat/metrics/: frame_processor_metrics.py  metrics.py
nanocat/observers/: base_observer.py
nanocat/pipeline/: base_pipeline.py  base_task.py  pipeline.py  runner.py  task.py  task_observer.py
nanocat/playground/transport/: base_input.py  base_output.py
nanocat/processors/: frame_processor.py
nanocat/processors/aggregators/: llm_response.py  openai_llm_context.py
nanocat/serializers/: base_serializer.py  protobuf.py
nanocat/services/: ai_service.py  llm_service.py  stt_service.py  tts_service.py  websocket_service.py
nanocat/services/azure/: common.py  tts.py
nanocat/services/deepgram/: stt.py
nanocat/services/openai/: base_llm.py  base_stt.py  llm.py  stt.py
nanocat/transports/: base_input.py  base_output.py  base_transport.py
nanocat/transports/network/: fastapi_websocket.py
nanocat/utils/: base_object.py
nanocat/utils/text/: simple_text_aggregator.py
(+1 files in other folders)
